# clang-tidy-inspections

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  abseil-string-find-startswith.cpp  argument-selection-defects.cpp  build.bat  empty-decl-or-stmt.cpp  main.cpp  method-can-be-static.cpp  qodana.sarif.json  qodana.yaml
abseil/: .clang-tidy  CMakeLists.txt  abseil-duration-addition.cpp  abseil-duration-comparison.cpp  abseil-string-find-startswith.cpp  run_abseil_inspection.cpp
analyzer/: .clang-tidy  CMakeLists.txt  run_analyzer_inspection.cpp
boost/: .clang-tidy  CMakeLists.txt  boost-use-to-string.cpp  run_boost_inspection.cpp
bugprone/: .clang-tidy  CMakeLists.txt  bugprone-argument-comment.cpp  bugprone-assert-side-effect.cpp  bugprone-bool-pointer-implicit-conversion.cpp  bugprone-copy-constructor-init.cpp  bugprone-dangling-handle.cpp  bugprone-fold-init-type.cpp  bugprone-forward-declaration-namespace.cpp  bugprone-forwarding-reference-overload.cpp  bugprone-inaccurate-erase.cpp  bugprone-incorrect-roundings.cpp  bugprone-integer-division.cpp  bugprone-lambda-function-name.cpp  bugprone-macro-parentheses.cpp  bugprone-macro-repeated-side-effects.cpp  bugprone-misplaced-widening-cast.cpp  bugprone-move-forwarding-reference.cpp  bugprone-spuriously-wake-up-functions.cpp  bugprone-string-constructor.cpp  bugprone-string-integer-assignment.cpp  bugprone-too-small-loop-variable.cpp  bugprone-unchecked-optional-access.cpp  run_bugprone_inspection.cpp
cert/: .clang-tidy  CMakeLists.txt  cert-dcl16-c.cpp  cert-dcl50-cpp.cpp  cert-dcl58-cpp.cpp  cert-err52-cpp.cpp  run_cert_inspection.cpp
clion/: .clang-tidy  CMakeLists.txt  argument-selection-defects.cpp  empty-decl-or-stmt.cpp  method-can-be-static.cpp  run_clion_inspection.cpp
cppcoreguidelines/: .clang-tidy  CMakeLists.txt  avoid-non-const-global-variables.cpp  narrowing-conversions.cpp  run_cppcoreguidelines_inspection.cpp
fuchsia/: .clang-tidy  CMakeLists.txt  fuchsia-default-arguments-calls.cpp  run_fuchsia_inspection.cpp
golder_results/: ClangTidy_CLion_2023.1_Linux_GCC.html  ClangTidy_CLion_2023.1_Linux_GCC.xml
google/: CMakeLists.txt  google-default-arguments.cpp  google-explicit-constructor.cpp  google-readability-casting.cpp  google-readability-namespace-comments.cpp  google-runtime-operator.cpp  run_google_inspection.cpp
hicpp/: .clang-tidy  CMakeLists.txt  hicpp-exception-baseclass.cpp  hicpp-multiway-paths-covered.cpp  hicpp-signed-bitwise.cpp  run_hicpp_inspection.cpp
include/: abseil-string-find-startswith.h  argument-selection-defects.h  empty-decl-or-stmt.h  method-can-be-static.h
misc/: .clang-tidy  CMakeLists.txt  misc-misplaced-const.cpp  misc-new-delete-overloads.cpp  misc-no-recursion.cpp  misc-non-copyable-objects.cpp  misc-throw-by-value-catch-by-reference.cpp  misc-unconventional-assign-operator.cpp  misc-uniqueptr-reset-release.cpp  run_misc_inspection.cpp
modernize/: CMakeLists.txt  modernize-avoid-bind.cpp  modernize-avoid-c-arrays.cpp  modernize-deprecated-headers.cpp  modernize-loop-convert.cpp  modernize-make-shared.cpp  modernize-pass-by-value.cpp  modernize-raw-string-literal.cpp  (+7 more)
(+165 files in other folders)
